Update titles to Ultimate Tic Tac Toe

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/tictactoe.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Super Tic-Tac-Toe</title>
+  <title>Ultimate Tic Tac Toe</title>
     <meta name="description" content="Master the ultimate strategic grid battle game - where every move shapes the battlefield!">
   </head>
   <body>
